# Dotel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Core/: CMakeLists.txt
Core/Lib/: CMakeLists.txt
Core/Lib/include/: Dotel.h  Logger.h  Test.h
Core/Lib/source/: Logger.cpp  Test.cpp
Core/Test/: CMakeLists.txt
Core/Test/source/: Main.cpp
Demo/: CMakeLists.txt
Demo/DEC2017/: CMakeLists.txt
Demo/NOV2017/: CMakeLists.txt
Demo/NOV2017/source/: Main.cpp  Test.cpp  Test.h
DirectX/Lib/: CMakeLists.txt
DirectX/Lib/include/: Test.h
DirectX/Lib/source/: Test.cpp
DirectX/Test/: CMakeLists.txt
DirectX/Test/source/: Main.cpp
OpenGL/: CMakeLists.txt
OpenGL/Lib/: CMakeLists.txt
OpenGL/Lib/include/: Mesh.h  ShaderLoader.h  Test.h  Texture.h  Window.h
OpenGL/Lib/source/: Mesh.cpp  ShaderLoader.cpp  Test.cpp  Texture.cpp  Window.cpp
OpenGL/Test/: CMakeLists.txt
OpenGL/Test/source/: Main.cpp
OpenGL/Test/source/data/shaders/: core.frag.glsl
assets/shaders/: core.frag.glsl  core.vs.glsl
cmake/: FindDirectX.cmake
source/: D_Logger.cpp  D_Logger.h  D_Mesh.cpp  D_Mesh.h  D_Renderer.cpp  D_Renderer.h  D_ShaderLoader.cpp  D_ShaderLoader.h  D_Texture.cpp  D_Texture.h  D_Triangle.cpp  D_Triangle.h  D_Window.cpp  D_Window.h  Window.cpp  Window.h  main.cpp
